# swagger/swagger.yml
@@ -175,19 +175,34 @@ paths:
         "400":
           description: ""
   /user/addCart:
-    get:
+    post:
       tags:
       - user
       description: 添加购物车
       operationId: UserControllers.TODO:添加购物车
-  /user/id/{id}:
+  /user/addresses:
+    get:
+      tags:
+      - user
+      description: 根据 userId 获取收货地址
+      operationId: UserControllers.根据 userId 获取收货地址
+      responses:
+        "200":
+          description: ""
+          schema:
+            type: array
+            items:
+              $ref: '#/definitions/models.Address'
+        "400":
+          description: ""
+  /user/id:
     get:
       tags:
       - user
       description: 根据 Id（数据库表 Id ，不是用户名）来获取对应用户信息
       operationId: UserControllers.根据 id 获取 User
       parameters:
-      - in: path
+      - in: query
         name: id
         description: 数据库 User 表ID
         required: true
@@ -198,12 +213,17 @@ paths:
           description: ""
         "400":
           description: ""
-  "/user/info\t[get]":
+  /user/info:
     get:
       tags:
       - user
       description: 用户登录之后查询当前登录的用户信息，每次查询会刷新 Session 有效期
       operationId: UserControllers.根据当前的 Session 查询对应的用户信息
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: ""
   /user/login:
     post:
       tags:
@@ -211,25 +231,34 @@ paths:
       description: 用账号密码登录
       operationId: UserControllers.登录
       parameters:
-      - in: body
-        name: LoginUserForm
-        description: 登录信息
+      - in: formData
+        name: username
+        description: 用户名
         required: true
-        schema:
-          $ref: '#/definitions/forms.LoginForm'
+        type: string
+      - in: formData
+        name: password
+        description: 密码
+        required: true
+        type: string
       responses:
         "200":
           description: ""
         "400":
           description: ""
-  "/user/logout\t[post]":
-    get:
+  /user/logout:
+    post:
       tags:
       - user
       description: 注销登录
       operationId: UserControllers.登出/注销登录
-  "/user/register\t[post]":
-    get:
+      responses:
+        "200":
+          description: ""
+        "400":
+          description: ""
+  /user/register:
+    post:
       tags:
       - user
       description: 注册
@@ -247,14 +276,6 @@ paths:
         "400":
           description: ""
 definitions:
-  forms.LoginForm:
-    title: LoginForm
-    type: object
-    properties:
-      Password:
-        type: string
-      Username:
-        type: string
   forms.RegisterForm:
     title: RegisterForm
     type: object
@@ -271,13 +292,29 @@ definitions:
         type: string
       Username:
         type: string
+  models.Address:
+    title: Address
+    type: object
+    properties:
+      address:
+        type: string
+      id:
+        type: integer
+        format: int64
+      name:
+        type: string
+      phone:
+        type: string
+      user_id:
+        type: integer
+        format: int64
   models.BaseModel:
     title: BaseModel
     type: object
     properties:
       id:
         type: integer
-        format: int32
+        format: int64
   models.Object:
     title: Object
     type: object
@@ -308,7 +345,7 @@ definitions:
         format: datetime
       id:
         type: integer
-        format: int32
+        format: int64
       name:
         type: string
       product_packages:
@@ -323,6 +360,8 @@ definitions:
       target_price:
         type: number
         format: double
+      user_id:
+        type: string
   models.ProductPackage:
     title: ProductPackage
     type: object
@@ -340,7 +379,7 @@ definitions:
         format: double
       id:
         type: integer
-        format: int32
+        format: int64
       image_url:
         type: string
       price:
